2008-06-01  Guillem Jover  <guillem@debian.org>

	* lib/subproc.c (setup_subproc_signals): Use size_t intead of int
	for the index, to fix a warning.
	(cu_subproc_signals): Likewise.

2008-06-01  Guillem Jover  <guillem@debian.org>

	* src/query.c (searchfiles): Use strpbrk instead of strcspn and
	strlen.

2008-06-01  Guillem Jover  <guillem@debian.org>

	* src/query.c: Include <dpkg-priv.h>.
	(searchfiles): Trim trailing '/' and '/.' from file searches only
	on path names, but not patterns.

2008-06-01  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-priv.h (rtrim_slash_slashdot): Return the string size.

2008-06-01  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Control.pm (parse, parse_fh, new): Add a new function
	parse_fh() to be able to parse the control file from an arbitrary
	file handle. Change parse() to use it and modify new() to parse
	STDIN instead of a real file if the parameter is "-".

2008-06-01  Daniel Hahler  <debian-bugs@thequod.de>

	* src/archives.c (tarobject): Improve error message stating that
	dpkg is unable to create a file so that it also refers to the real
	filename instead of the non-diverted name only.

2008-05-24  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (do_build): Move argument name into a parameter to
	coalesce similar strings for translation.
	* dpkg-split/info.c (do_info): Likewise.
	* dpkg-split/join.c (do_join): Likewise.
	* dpkg-split/queue.c (do_queue): Likewise.
	* src/enquiry.c (audit, unpackchk, assertversion, predeppackage)
	(printarch): Likewise.
	* src/select.c (setselections, clearselections): Likewise.

2008-05-24  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/main.c: Include <dpkg-priv.h>.
	(setaction): Use sizeof_array instead of ad-hoc calculation.
	* dpkg-split/main.c: Include <dpkg-priv.h>.
	(setaction): Use sizeof_array instead of ad-hoc calculation.

2008-05-24  Guillem Jover  <guillem@debian.org>

	* src/trigcmd.c (main): Remove duplicate program name from badusage.
