@@ -1,5 +1,9 @@
 2008-06-01  Guillem Jover  <guillem@debian.org>
 
+	* lib/varbuf.c (varbufdupc): Use memset instead of ad-hoc operation.
+
+2008-06-01  Guillem Jover  <guillem@debian.org>
+
 	* lib/subproc.c (setup_subproc_signals): Use size_t intead of int
 	for the index, to fix a warning.
 	(cu_subproc_signals): Likewise.
